// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MErrorMessage given error should render correctly expanded 1`] = `
<div class="m-error-message">
  <m-message-stub state="error" skin="default" icon="true" visible="visible">
    <m-i18n-stub k="m-error-message:message" params="" htmlEncode="true"></m-i18n-stub>
  </m-message-stub>
  <p>
    <m-i18n-stub k="m-error-message:directions.primary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <p>
    <m-i18n-stub k="m-error-message:directions.secondary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <div skin="light" icon-size="small">
    <m-i18n-stub k="m-error-message:details" params="" htmlEncode="true"></m-i18n-stub>
    <p><strong><m-i18n-stub k="m-error-message:browser" params="" htmlEncode="true"></m-i18n-stub>: </strong>modul-user-agent</p>
    <p><strong><m-i18n-stub k="m-error-message:reference-number" params="" htmlEncode="true"></m-i18n-stub>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </div>
  <m-link-stub url="/" mode="link" underline="true" skin="default" iconPosition="left" iconSize="1em" tabindex="0">
    <m-i18n-stub k="m-error-message:help" params="" htmlEncode="true"></m-i18n-stub>
  </m-link-stub>
</div>
`;

exports[`MErrorMessage given error should render correctly expanded with stack trace on 1`] = `
<div class="m-error-message">
  <m-message-stub state="error" skin="default" icon="true" visible="visible">
    <m-i18n-stub k="m-error-message:message" params="" htmlEncode="true"></m-i18n-stub>
  </m-message-stub>
  <p>
    <m-i18n-stub k="m-error-message:directions.primary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <p>
    <m-i18n-stub k="m-error-message:directions.secondary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <div skin="light" icon-size="small">
    <m-i18n-stub k="m-error-message:details" params="" htmlEncode="true"></m-i18n-stub>
    <p><strong><m-i18n-stub k="m-error-message:browser" params="" htmlEncode="true"></m-i18n-stub>: </strong>modul-user-agent</p>
    <p><strong><m-i18n-stub k="m-error-message:reference-number" params="" htmlEncode="true"></m-i18n-stub>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
    <div class="m-error-message__stacktrace"><pre></pre>
    </div>
  </div>
  <m-link-stub url="/" mode="link" underline="true" skin="default" iconPosition="left" iconSize="1em" tabindex="0">
    <m-i18n-stub k="m-error-message:help" params="" htmlEncode="true"></m-i18n-stub>
  </m-link-stub>
</div>
`;

exports[`MErrorMessage given error with stack trace should render correctly expanded 1`] = `
<div class="m-error-message">
  <m-message-stub state="error" skin="default" icon="true" visible="visible">
    <m-i18n-stub k="m-error-message:message" params="" htmlEncode="true"></m-i18n-stub>
  </m-message-stub>
  <p>
    <m-i18n-stub k="m-error-message:directions.primary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <p>
    <m-i18n-stub k="m-error-message:directions.secondary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <div skin="light" icon-size="small">
    <m-i18n-stub k="m-error-message:details" params="" htmlEncode="true"></m-i18n-stub>
    <p><strong><m-i18n-stub k="m-error-message:browser" params="" htmlEncode="true"></m-i18n-stub>: </strong>modul-user-agent</p>
    <p><strong><m-i18n-stub k="m-error-message:reference-number" params="" htmlEncode="true"></m-i18n-stub>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </div>
  <m-link-stub url="/" mode="link" underline="true" skin="default" iconPosition="left" iconSize="1em" tabindex="0">
    <m-i18n-stub k="m-error-message:help" params="" htmlEncode="true"></m-i18n-stub>
  </m-link-stub>
</div>
`;

exports[`MErrorMessage given error with stack trace should render correctly expanded with stack trace on 1`] = `
<div class="m-error-message">
  <m-message-stub state="error" skin="default" icon="true" visible="visible">
    <m-i18n-stub k="m-error-message:message" params="" htmlEncode="true"></m-i18n-stub>
  </m-message-stub>
  <p>
    <m-i18n-stub k="m-error-message:directions.primary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <p>
    <m-i18n-stub k="m-error-message:directions.secondary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <div skin="light" icon-size="small">
    <m-i18n-stub k="m-error-message:details" params="" htmlEncode="true"></m-i18n-stub>
    <p><strong><m-i18n-stub k="m-error-message:browser" params="" htmlEncode="true"></m-i18n-stub>: </strong>modul-user-agent</p>
    <p><strong><m-i18n-stub k="m-error-message:reference-number" params="" htmlEncode="true"></m-i18n-stub>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
    <div class="m-error-message__stacktrace"><pre>This is a stack trace</pre>
    </div>
  </div>
  <m-link-stub url="/" mode="link" underline="true" skin="default" iconPosition="left" iconSize="1em" tabindex="0">
    <m-i18n-stub k="m-error-message:help" params="" htmlEncode="true"></m-i18n-stub>
  </m-link-stub>
</div>
`;

exports[`MErrorMessage should render correctly collapsed 1`] = `
<div class="m-error-message">
  <m-message-stub state="error" skin="default" icon="true" visible="visible">
    <m-i18n-stub k="m-error-message:message" params="" htmlEncode="true"></m-i18n-stub>
  </m-message-stub>
  <p>
    <m-i18n-stub k="m-error-message:directions.primary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <p>
    <m-i18n-stub k="m-error-message:directions.secondary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <m-accordion-stub skin="light" iconPosition="left" iconSize="small" padding="true" paddingHeader="true" paddingBody="true">
    <m-i18n-stub k="m-error-message:details" params="" htmlEncode="true"></m-i18n-stub>
    <p><strong><m-i18n-stub k="m-error-message:browser" params="" htmlEncode="true"></m-i18n-stub>: </strong>modul-user-agent</p>
    <p><strong><m-i18n-stub k="m-error-message:reference-number" params="" htmlEncode="true"></m-i18n-stub>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </m-accordion-stub>
  <m-link-stub url="/" mode="link" underline="true" skin="default" iconPosition="left" iconSize="1em" tabindex="0">
    <m-i18n-stub k="m-error-message:help" params="" htmlEncode="true"></m-i18n-stub>
  </m-link-stub>
</div>
`;

exports[`MErrorMessage should render correctly expanded 1`] = `
<div class="m-error-message">
  <m-message-stub state="error" skin="default" icon="true" visible="visible">
    <m-i18n-stub k="m-error-message:message" params="" htmlEncode="true"></m-i18n-stub>
  </m-message-stub>
  <p>
    <m-i18n-stub k="m-error-message:directions.primary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <p>
    <m-i18n-stub k="m-error-message:directions.secondary" params="" htmlEncode="true"></m-i18n-stub>
  </p>
  <div skin="light" icon-size="small">
    <m-i18n-stub k="m-error-message:details" params="" htmlEncode="true"></m-i18n-stub>
    <p><strong><m-i18n-stub k="m-error-message:browser" params="" htmlEncode="true"></m-i18n-stub>: </strong>modul-user-agent</p>
    <p><strong><m-i18n-stub k="m-error-message:reference-number" params="" htmlEncode="true"></m-i18n-stub>: </strong>123456879</p>
    <p>Elle a eu lieu le &lt;strong&gt;2018-01-02&lt;/strong&gt; à &lt;strong&gt;00:01:02&lt;/strong&gt;</p>
  </div>
  <m-link-stub url="/" mode="link" underline="true" skin="default" iconPosition="left" iconSize="1em" tabindex="0">
    <m-i18n-stub k="m-error-message:help" params="" htmlEncode="true"></m-i18n-stub>
  </m-link-stub>
</div>
`;
